--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=dev node server.js",
     "prod": "NODE_ENV=prod node server.js",
     "build": "webpack -p",
-    "build-dev": "webpack"
+    "build-dev": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,10 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "webpack-hot-middleware": "^2.5.0",
+    "babel-jest": "^9.0.3",
+    "jest": "^0.1.40",
+    "jest-cli": "^0.9.2"
   },
   "dependencies": {
     "es6-promise": "^3.1.2",
