--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "es6 MM",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=dev node server.js",
+    "start": "babel --presets es2015 --watch src/ --out-dir lib/ & NODE_ENV=dev node server.js",
     "dev": "NODE_ENV=dev node server.js",
     "prod": "NODE_ENV=prod node server.js",
     "build": "webpack -p",
