--- a/package.json
+++ b/package.json
@@ -23,29 +23,31 @@
   "homepage": "https://github.com/jerryshew/em2",
   "devDependencies": {
     "autoprefixer": "^6.3.5",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.0.0",
+    "babel-jest": "^9.0.3",
     "babel-loader": "^6.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.0.0",
+    "cross-env": "^4.0.0",
     "css-loader": "^0.17.0",
     "eslint": "^2.7.0",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.6.1",
+    "jest": "^0.1.40",
+    "jest-cli": "^0.9.2",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.12.3",
-    "file-loader": "^0.8.5",
     "uglify-loader": "^1.2.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0",
-    "babel-jest": "^9.0.3",
-    "jest": "^0.1.40",
-    "jest-cli": "^0.9.2"
+    "webpack": "^1.15.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "rsvp": "^3.2.1",
