--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
-    "rsvp": "^3.2.1",
-    "whatwg-fetch": "^1.0.0"
+    "es6-promise": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "rsvp": "^3.2.1"
   }
 }
